@@ -20,6 +20,15 @@
 <div id="mainSection">
 <div id="mainBody">
 
+<strong><p>Connector/Net 6.1</p></strong>
+<ul>
+    <li>New ASP.Net configuration wizard</li>
+    <li>Added Session state provider</li>
+    <li>Native support for prepared statement inout and output parameters</li>
+    <li>Changed GUID support to char(36)</li>
+    <li>SSL enhancements</li>
+</ul>
+
 <strong><p>Connector/Net 6.0</p></strong>
 <ul>
     <li>Entity framework support</li>
