@@ -43,7 +43,7 @@
     <RootNamespaceTitle>Reference</RootNamespaceTitle>
     <HelpTitle>MySQL Connector/Net</HelpTitle>
     <CopyrightHref>http://www.mysql.com</CopyrightHref>
-    <CopyrightText>&amp;#169%3b 2004-2008 MySQL AB. All rights reserved.</CopyrightText>
+    <CopyrightText>&amp;#169%3b 2004-2008 MySQL AB, 2008-2009 Sun Microsystems, Inc. All rights reserved.</CopyrightText>
     <FeedbackEMailAddress>support%40mysql.com</FeedbackEMailAddress>
     <PresentationStyle>vs2005</PresentationStyle>
     <NamingMethod>MemberName</NamingMethod>
