@@ -166,6 +166,12 @@ namespace MySql.Data.VisualStudio
             packageKey.SetValue("CompanyName", "MySQL AB c/o MySQL, Inc.");
             packageKey.SetValue("MinEdition", "standard");
             packageKey.SetValue("ID", 100);
+
+            // our package should autoload if a solution exists
+            keyPath = String.Format(@"Software\Microsoft\VisualStudio\{0}\AutoLoadPackages\{F1536EF8-92EC-443C-9ED7-FDADF150DA82}",
+                version);
+            RegistryKey autoLoadKey = rootKey.OpenSubKey(keyPath, true);
+            autoLoadKey.SetValue(GuidList.PackageGUID.ToString("B"), 0);
         }
 
         private void UnInstallInternal(string version)
@@ -238,6 +244,12 @@ namespace MySql.Data.VisualStudio
                 key.Close();
                 rootKey.DeleteSubKeyTree(keyPath);
             }
+
+            // Autoload
+            keyPath = String.Format(@"Software\Microsoft\VisualStudio\{0}\AutoLoadPackages\{F1536EF8-92EC-443C-9ED7-FDADF150DA82}",
+                version);
+            RegistryKey autoLoadKey = rootKey.OpenSubKey(keyPath, true);
+            autoLoadKey.DeleteValue(GuidList.PackageGUID.ToString("B"), false);
         }
     }
 }
